--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "devDependencies": {
     "express": "^4.18.2",
     "mysql": "github:mysqljs/mysql"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5"
   }
 }
