--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "type": "module",
   "scripts": {
     "dev": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --coverage"
   },
   "keywords": [],
   "author": "Aidan Carvalho",
   "license": "ISC",
   "devDependencies": {
     "express": "^4.18.2",
-    "mysql": "github:mysqljs/mysql"
+    "mysql": "github:mysqljs/mysql",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jest": "^29.7.0"
   }
 }
