--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node src/app.js",
+    "dev": "node src/server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --coverage"
   },
   "keywords": [],
