--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.18.2",
-    "mysql": "github:mysqljs/mysql",
     "supertest": "^6.3.4"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "mysql2": "^3.9.1"
   }
 }
