--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "type": "module",
   "scripts": {
     "dev": "node src/server.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --coverage"
+    "test": "vitest --watch --coverage"
   },
   "keywords": [],
   "author": "Aidan Carvalho",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.3.0",
     "express": "^4.18.2",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "vitest": "^1.3.0"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
