--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vitest": "^1.3.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "jest": "^29.7.0",
