--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^1.3.0",
     "express": "^4.18.2",
+    "nodemon": "^3.0.3",
     "supertest": "^6.3.4",
     "vitest": "^1.3.0"
   },
@@ -23,6 +24,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "jest": "^29.7.0",
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "uuid": "^9.0.1"
   }
 }
