--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express-validator": "^7.0.1",
     "jest": "^29.7.0",
     "mysql2": "^3.9.1",
     "uuid": "^9.0.1"
