--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^7.0.1",
     "jest": "^29.7.0",
     "mysql2": "^3.9.1",
+    "sinon": "^17.0.1",
     "uuid": "^9.0.1"
   }
 }
