--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "vitest --coverage",
-    "test:dev": "vitest --watch"
+    "test": "vitest --coverage"
   },
   "keywords": [],
   "author": "Aidan Carvalho",
